results/SVCOMP/specgen/log-HttpServletResponse-2024_02_25_22_38_50.txt
import java.io.IOException;
import java.io.PrintWriter;

public class HttpServletResponse {

  //@ requires string != null;
  //@ requires !string.contains("<bad/>");
  public void sendRedirect(String string) throws IOException {
    checkNoSymbolic(string);
  }

  //@ ensures \result != null;
  public PrintWriter getWriter() throws IOException {
    return new PrintWriter(System.out) {
      @Override
      //@ requires x != null;
      //@ requires !x.contains("<bad/>");
      public void println(String x) {
        checkNoSymbolic(x);
      }

      @Override
      //@ requires x != null;
      //@ requires !String.valueOf(x).contains("<bad/>");
      public void println(Object x) {
        checkNoSymbolic(String.valueOf(x));
      }
    };
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  public void setContentType(String s) {
    checkNoSymbolic(s);
  }

  //@ requires s != null;
  private void checkNoSymbolic(String s) {
    if (s != null && s.contains("<bad/>")) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/HttpServletResponse.java:16: error: A method specification incorrectly follows non-JML modifiers
      //@ requires x != null;
          ^
/home/max/Documents/JMLGPT/tmp/HttpServletResponse.java:23: error: A method specification incorrectly follows non-JML modifiers
      //@ requires x != null;
          ^
2 errors

import java.io.IOException;
import java.io.PrintWriter;

public class HttpServletResponse {

  //@ requires string != null;
  //@ requires !string.contains("<bad/>");
  public void sendRedirect(String string) throws IOException {
    checkNoSymbolic(string);
  }

  //@ ensures \result != null;
  public PrintWriter getWriter() throws IOException {
    return new PrintWriter(System.out) {
      @Override
      public void println(String x) {
        //@ requires x != null;
        //@ requires !x.contains("<bad/>");
        checkNoSymbolic(x);
      }

      @Override
      public void println(Object x) {
        //@ requires x != null;
        //@ requires !String.valueOf(x).contains("<bad/>");
        checkNoSymbolic(String.valueOf(x));
      }
    };
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  public void setContentType(String s) {
    checkNoSymbolic(s);
  }

  //@ requires s != null;
  private void checkNoSymbolic(String s) {
    if (s != null && s.contains("<bad/>")) {
      assert false;
    }
  }
}
